combining plants and others into one row

--- a/2024/2024-10-08_National_Park_Species/2024-10-08.ipynb
+++ b/2024/2024-10-08_National_Park_Species/2024-10-08.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "            <div id=\"cMHHKy\"></div>\n",
+       "            <div id=\"TbfjnB\"></div>\n",
        "            <script type=\"text/javascript\" data-lets-plot-script=\"library\">\n",
        "                if(!window.letsPlotCallQueue) {\n",
        "                    window.letsPlotCallQueue = [];\n",
@@ -72,9 +72,9 @@
        "                        var div = document.createElement(\"div\");\n",
        "                        div.style.color = 'darkred';\n",
        "                        div.textContent = 'Error loading Lets-Plot JS';\n",
-       "                        document.getElementById(\"cMHHKy\").appendChild(div);\n",
+       "                        document.getElementById(\"TbfjnB\").appendChild(div);\n",
        "                    };\n",
-       "                    var e = document.getElementById(\"cMHHKy\");\n",
+       "                    var e = document.getElementById(\"TbfjnB\");\n",
        "                    e.appendChild(script);\n",
        "                })()\n",
        "            </script>\n",
@@ -125,7 +125,7 @@
        "└──────────┴──────────┴─────────────┴─────────────┴───┴─────────────┴────────────┴───────┴─────────┘"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,23 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_7324\\3272089793.py:1: DeprecationWarning:\n",
-      "\n",
-      "`GroupBy.count` is deprecated. It has been renamed to `len`.\n",
-      "\n"
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_21016\\3272089793.py:1: DeprecationWarning: `GroupBy.count` is deprecated. It has been renamed to `len`.\n",
+      "  species_per_park = species_data.select([\"ParkName\", \"SciName\"]).unique().group_by(\"ParkName\").count().rename({\"count\":\"number_of_species\"}).sort(\"number_of_species\", descending = True).head(10)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "   <div id=\"lP437W\"></div>\n",
+       "   <div id=\"mT58Lg\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
@@ -229,7 +227,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"lP437W\");\n",
+       "           var plotContainer = document.getElementById(\"mT58Lg\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -237,10 +235,10 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x1dd165643b0>"
+       "<lets_plot.plot.core.PlotSpec at 0x26f608d8980>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,29 +317,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_7324\\3096078348.py:20: DeprecationWarning:\n",
-      "\n",
-      "`GroupBy.count` is deprecated. It has been renamed to `len`.\n",
-      "\n"
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_21016\\3096078348.py:20: DeprecationWarning: `GroupBy.count` is deprecated. It has been renamed to `len`.\n",
+      "  .count()\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "   <div id=\"eGVCRE\"></div>\n",
+       "   <div id=\"wF6eAX\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
        "\"data\":{\n",
-       "\"ParkName\":[\"Grand Canyon\",\"Hot Springs\",\"Acadia\",\"Indiana Dunes\",\"Yellowstone\",\"Olympic\",\"Joshua Tree\",\"Zion\",\"Rocky Mountain\",\"Glacier\",\"Yosemite\",\"Great Smoky Mountains\",\"Grand Teton\",\"Cuyahoga Valley\",\"Bryce Canyon\",\"Great Smoky Mountains\",\"Grand Canyon\",\"Great Smoky Mountains\",\"Olympic\",\"Hot Springs\",\"Yosemite\",\"Cuyahoga Valley\",\"Zion\",\"Olympic\",\"Yellowstone\",\"Grand Canyon\",\"Bryce Canyon\",\"Indiana Dunes\",\"Rocky Mountain\",\"Grand Teton\",\"Glacier\",\"Joshua Tree\",\"Indiana Dunes\",\"Great Smoky Mountains\",\"Acadia\",\"Hot Springs\",\"Hot Springs\",\"Joshua Tree\",\"Great Smoky Mountains\",\"Cuyahoga Valley\",\"Acadia\",\"Indiana Dunes\",\"Zion\",\"Grand Canyon\",\"Glacier\",\"Hot Springs\",\"Indiana Dunes\",\"Cuyahoga Valley\",\"Cuyahoga Valley\",\"Grand Teton\",\"Yosemite\",\"Yellowstone\",\"Olympic\",\"Acadia\",\"Zion\",\"Grand Canyon\",\"Yosemite\",\"Bryce Canyon\",\"Rocky Mountain\",\"Acadia\",\"Yosemite\",\"Yellowstone\",\"Yellowstone\",\"Zion\",\"Olympic\",\"Glacier\",\"Grand Teton\",\"Joshua Tree\",\"Rocky Mountain\",\"Grand Teton\",\"Bryce Canyon\",\"Glacier\",\"Rocky Mountain\",\"Bryce Canyon\",\"Joshua Tree\"],\n",
-       "\"Category\":[\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Fish\",\"Mammal\",\"Mammal\",\"Fish\",\"Fish\",\"Mammal\",\"Fish\",\"Mammal\",\"Mammal\",\"Mammal\",\"Reptile\",\"Mammal\",\"Fish\",\"Mammal\",\"Mammal\",\"Mammal\",\"Mammal\",\"Mammal\",\"Amphibian\",\"Mammal\",\"Reptile\",\"Mammal\",\"Reptile\",\"Reptile\",\"Mammal\",\"Fish\",\"Reptile\",\"Reptile\",\"Fish\",\"Fish\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Amphibian\",\"Fish\",\"Reptile\",\"Fish\",\"Amphibian\",\"Amphibian\",\"Fish\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Fish\",\"Reptile\",\"Fish\",\"Reptile\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Amphibian\",\"Amphibian\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Amphibian\",\"Reptile\",\"Reptile\",\"Fish\",\"Fish\"],\n",
+       "\"ParkName\":[\"Grand Canyon\",\"Hot Springs\",\"Acadia\",\"Indiana Dunes\",\"Yellowstone\",\"Olympic\",\"Zion\",\"Joshua Tree\",\"Rocky Mountain\",\"Glacier\",\"Yosemite\",\"Great Smoky Mountains\",\"Grand Teton\",\"Cuyahoga Valley\",\"Bryce Canyon\",\"Great Smoky Mountains\",\"Grand Canyon\",\"Great Smoky Mountains\",\"Olympic\",\"Hot Springs\",\"Yosemite\",\"Cuyahoga Valley\",\"Zion\",\"Olympic\",\"Yellowstone\",\"Bryce Canyon\",\"Grand Canyon\",\"Indiana Dunes\",\"Rocky Mountain\",\"Grand Teton\",\"Glacier\",\"Joshua Tree\",\"Indiana Dunes\",\"Great Smoky Mountains\",\"Acadia\",\"Hot Springs\",\"Hot Springs\",\"Joshua Tree\",\"Cuyahoga Valley\",\"Great Smoky Mountains\",\"Acadia\",\"Indiana Dunes\",\"Zion\",\"Grand Canyon\",\"Glacier\",\"Hot Springs\",\"Cuyahoga Valley\",\"Indiana Dunes\",\"Cuyahoga Valley\",\"Grand Teton\",\"Yosemite\",\"Yellowstone\",\"Olympic\",\"Zion\",\"Acadia\",\"Grand Canyon\",\"Yosemite\",\"Bryce Canyon\",\"Rocky Mountain\",\"Acadia\",\"Yosemite\",\"Yellowstone\",\"Yellowstone\",\"Zion\",\"Glacier\",\"Grand Teton\",\"Olympic\",\"Grand Teton\",\"Rocky Mountain\",\"Joshua Tree\",\"Glacier\",\"Bryce Canyon\",\"Rocky Mountain\",\"Joshua Tree\",\"Bryce Canyon\"],\n",
+       "\"Category\":[\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Bird\",\"Fish\",\"Mammal\",\"Mammal\",\"Fish\",\"Fish\",\"Mammal\",\"Fish\",\"Mammal\",\"Mammal\",\"Mammal\",\"Mammal\",\"Reptile\",\"Fish\",\"Mammal\",\"Mammal\",\"Mammal\",\"Mammal\",\"Mammal\",\"Amphibian\",\"Mammal\",\"Mammal\",\"Reptile\",\"Reptile\",\"Mammal\",\"Reptile\",\"Fish\",\"Reptile\",\"Reptile\",\"Fish\",\"Fish\",\"Amphibian\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Fish\",\"Reptile\",\"Fish\",\"Amphibian\",\"Fish\",\"Amphibian\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Fish\",\"Reptile\",\"Fish\",\"Amphibian\",\"Reptile\",\"Amphibian\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Reptile\",\"Amphibian\",\"Amphibian\",\"Reptile\",\"Amphibian\",\"Reptile\",\"Fish\",\"Fish\"],\n",
        "\"count\":[456.0,387.0,364.0,353.0,330.0,310.0,301.0,301.0,278.0,277.0,270.0,267.0,266.0,246.0,218.0,110.0,107.0,101.0,97.0,90.0,87.0,85.0,80.0,79.0,78.0,76.0,76.0,76.0,75.0,74.0,69.0,67.0,60.0,58.0,55.0,52.0,52.0,52.0,47.0,47.0,38.0,30.0,30.0,29.0,27.0,27.0,24.0,24.0,24.0,23.0,22.0,19.0,16.0,15.0,15.0,15.0,14.0,13.0,12.0,11.0,10.0,9.0,9.0,7.0,6.0,6.0,6.0,5.0,5.0,5.0,4.0,4.0,3.0,1.0,1.0]\n",
        "},\n",
        "\"mapping\":{\n",
@@ -400,7 +396,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"eGVCRE\");\n",
+       "           var plotContainer = document.getElementById(\"wF6eAX\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -408,10 +404,10 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x1dd183b2570>"
+       "<lets_plot.plot.core.PlotSpec at 0x26f608dbcb0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,23 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_7324\\2556515673.py:7: DeprecationWarning:\n",
-      "\n",
-      "`GroupBy.count` is deprecated. It has been renamed to `len`.\n",
-      "\n"
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_21016\\2556515673.py:7: DeprecationWarning: `GroupBy.count` is deprecated. It has been renamed to `len`.\n",
+      "  .count()\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "   <div id=\"Tc5zW5\"></div>\n",
+       "   <div id=\"s5lDqb\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
@@ -562,7 +556,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"Tc5zW5\");\n",
+       "           var plotContainer = document.getElementById(\"s5lDqb\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -570,10 +564,10 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x1dd183b3650>"
+       "<lets_plot.plot.core.PlotSpec at 0x26f608da960>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,23 +597,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_7324\\2649027645.py:7: DeprecationWarning:\n",
-      "\n",
-      "`GroupBy.count` is deprecated. It has been renamed to `len`.\n",
-      "\n"
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_21016\\2649027645.py:7: DeprecationWarning: `GroupBy.count` is deprecated. It has been renamed to `len`.\n",
+      "  .count()\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "   <div id=\"V8fMWZ\"></div>\n",
+       "   <div id=\"kjnAUh\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
@@ -683,7 +675,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"V8fMWZ\");\n",
+       "           var plotContainer = document.getElementById(\"kjnAUh\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -691,10 +683,10 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x1dd184ef8c0>"
+       "<lets_plot.plot.core.PlotSpec at 0x26f608eede0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +729,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>CategoryName</th><th>Count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;Fish&quot;</td><td>15</td></tr><tr><td>&quot;Amphibian&quot;</td><td>7</td></tr><tr><td>&quot;Bird&quot;</td><td>301</td></tr><tr><td>&quot;Reptile&quot;</td><td>30</td></tr><tr><td>&quot;Mammal&quot;</td><td>80</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>CategoryName</th><th>Count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;Bird&quot;</td><td>301</td></tr><tr><td>&quot;Amphibian&quot;</td><td>7</td></tr><tr><td>&quot;Reptile&quot;</td><td>30</td></tr><tr><td>&quot;Mammal&quot;</td><td>80</td></tr><tr><td>&quot;Fish&quot;</td><td>15</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -746,15 +738,15 @@
        "│ ---          ┆ ---   │\n",
        "│ str          ┆ u32   │\n",
        "╞══════════════╪═══════╡\n",
-       "│ Fish         ┆ 15    │\n",
-       "│ Amphibian    ┆ 7     │\n",
        "│ Bird         ┆ 301   │\n",
+       "│ Amphibian    ┆ 7     │\n",
        "│ Reptile      ┆ 30    │\n",
        "│ Mammal       ┆ 80    │\n",
+       "│ Fish         ┆ 15    │\n",
        "└──────────────┴───────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,19 +765,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "   <div id=\"gDPXjU\"></div>\n",
+       "   <div id=\"p3Gyfp\"></div>\n",
        "   <script type=\"text/javascript\" data-lets-plot-script=\"plot\">\n",
        "       (function() {\n",
        "           var plotSpec={\n",
        "\"data\":{\n",
-       "\"CategoryName\":[\"Fish\",\"Amphibian\",\"Bird\",\"Reptile\",\"Mammal\"],\n",
-       "\"Count\":[15.0,7.0,301.0,30.0,80.0]\n",
+       "\"CategoryName\":[\"Bird\",\"Amphibian\",\"Reptile\",\"Mammal\",\"Fish\"],\n",
+       "\"Count\":[301.0,7.0,30.0,80.0,15.0]\n",
        "},\n",
        "\"mapping\":{\n",
        "},\n",
@@ -823,7 +815,7 @@
        "}],\n",
        "\"metainfo_list\":[]\n",
        "};\n",
-       "           var plotContainer = document.getElementById(\"gDPXjU\");\n",
+       "           var plotContainer = document.getElementById(\"p3Gyfp\");\n",
        "           window.letsPlotCall(function() {{\n",
        "               LetsPlot.buildPlotFromProcessedSpecs(plotSpec, -1, -1, plotContainer);\n",
        "           }});\n",
@@ -831,10 +823,10 @@
        "   </script>"
       ],
       "text/plain": [
-       "<lets_plot.plot.core.PlotSpec at 0x1dd183b2990>"
+       "<lets_plot.plot.core.PlotSpec at 0x26f608db650>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,6 +848,15 @@
     "    scale_fill_manual(values = values) +\n",
     "    theme_void()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = species_data.select(\"CategoryName\").unique()"
    ]
   }
  ],
